--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "vim/.vim/bundle/syntastic"]
 	path = vim/.vim/bundle/syntastic
 	url = https://github.com/scrooloose/syntastic.git
+[submodule "vim/.vim/bundle/NERDCommenter"]
+	path = vim/.vim/bundle/NERDCommenter
+	url = https://github.com/scrooloose/nerdcommenter.git
